[gd_scene load_steps=4 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://addons/kenney_interface_sounds/select_002.wav" type="AudioStream" id=2]
[ext_resource path="res://Button.gd" type="Script" id=3]

[node name="Button" type="Button"]
margin_top = 1208.0
margin_right = 708.0
margin_bottom = 1268.0
rect_min_size = Vector2( 0, 60 )
theme = ExtResource( 1 )
text = "Compute"
script = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
mix_target = 2
bus = "SFX"

[node name="HoldDelay" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="button_down" from="." to="." method="_on_Button_button_down"]
[connection signal="button_up" from="." to="." method="_on_Button_button_up"]
